src/objects/copado__Branch_Management_Permission__c.object
<CustomObject>
    <description>This object stores the permissions relating to a user per environment</description>
    <fields>
        <fullName>copado__Allow_Deployments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Deployments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Branch Management Permissions</relationshipLabel>
        <relationshipName>Branch_Management_Permissisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Branch Management Permissisions</relationshipLabel>
        <relationshipName>Branch_Management_Permissisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Branch Management Permission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>copado__Environment__c</columns>
        <columns>copado__User__c</columns>
        <columns>copado__Allow_Deployments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>RedOrg</fullName>
        <columns>NAME</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__User__c</columns>
        <columns>copado__Allow_Deployments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Environment__c</field>
            <operation>contains</operation>
            <value>RED</value>
        </filters>
        <label>RedOrg</label>
    </listViews>
    <nameField>
        <displayFormat>BMP-{000000}</displayFormat>
        <label>Branch Management Permission Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Management Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>